fixed squished contact button

--- a/_design/designStyles/styles.scss
+++ b/_design/designStyles/styles.scss
@@ -316,6 +316,9 @@ footer {
   i {
     font-size: 2.5vmax;
   }
+  .lastLi {
+    height: 50vw;
+  }
 }
 
 @media(max-width: 644px) {
